security, swager config

--- a/codes/spring/spring-frontend1/signup.html
+++ b/codes/spring/spring-frontend1/signup.html
@@ -23,6 +23,7 @@
         <input type="text" id="teacher-email"> <br>
 
         <input type="submit" value="Yadda saxla">
+        <button>Sign In</button>
     </form>
 
     <script src="./js/signup.js"></script>
